<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/edit_email_login_activity"
        android:layout_marginTop="200dp"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/login_password_username_style"
        android:hint="@string/email_text_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="24dp" />

    <EditText
        android:id="@+id/edit_password_login_activity"
        android:layout_marginBottom="32dp"
        android:layout_below="@id/edit_email_login_activity"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:background="@drawable/login_password_username_style"
        android:hint="@string/password_text_hint"
        android:inputType="textPassword"
        android:paddingLeft="24dp" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_below="@id/edit_password_login_activity"
        android:textColor="@color/colorCoolGrey"
        android:text="@string/sign_in_button_text"
        android:background="@drawable/button_sign_up_in_style"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>