<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorCoolGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encrypt_title_alert_dialog"
            android:fontFamily="@font/ubuntu_font"
            android:textColor="@color/colorCoolWhite"
            android:textSize="23sp"
            android:layout_margin="12dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edittext_key_cipher_encrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_cipher_key_string"
        android:textColor="@color/colorMatrixGreen"
        android:layout_margin="4dp"
        android:fontFamily="@font/ubuntu_font"
        android:textColorHint="@color/colorCuteGrey"
        android:backgroundTintMode="src_in"
        android:background="@drawable/edittext_style"
        android:padding="10dp"
        android:inputType="phone"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

            <Button
                android:id="@+id/ok_button_key_encrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/ok_string"
                android:textColor="@color/colorCoolWhite"
                android:fontFamily="@font/ubuntu_font"
                android:textSize="20sp"
                android:background="@color/colorMatrixGreen"/>

    </LinearLayout>

</LinearLayout>