<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorCoolGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrypt_title_alert_dialog"
            android:fontFamily="@font/ubuntu_font"
            android:textColor="@color/colorCoolWhite"
            android:textSize="20sp"
            android:layout_margin="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textview_message_content_decrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/decrypt_title_alert_dialog"
            android:layout_margin="8dp"
            android:textColor="@color/colorMatrixGreen"
            android:textSize="20sp"
            android:fontFamily="@font/ubuntu_font"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/edittext_key_cipher_decrypt"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_cipher_key_string"
            android:textColorHint="@color/colorCuteGrey"
            android:textColor="@color/colorMatrixGreen"
            android:backgroundTintMode="src_in"
            android:background="@drawable/edittext_style"
            android:padding="10dp"
            android:inputType="phone"
            android:importantForAutofill="no"
            tools:targetApi="lollipop"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/ok_button_key_decrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorMatrixGreen"
            android:layout_margin="8dp"
            android:text="@string/ok_string"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:fontFamily="@font/ubuntu_font"/>
    </LinearLayout>

</LinearLayout>